--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,12 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
+
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
+
+
     buildTypes {
         release {
             minifyEnabled false
@@ -32,7 +38,7 @@ dependencies {
     compile "com.google.android.gms:play-services:10.2.0"
 
     // Google Firebase Library
-    compile "com.google.firebase:firebase-core:10.2.0"
+    compile "com.google.firebase:firebase-messaging:10.2.0"
 
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:cardview-v7:25.1.0'
