--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.1.0'
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'com.google.zxing:core:3.2.0'
-
+    compile 'com.android.support:multidex:1.0.1'
 
     compile 'com.afollestad.material-dialogs:commons:0.9.0.2'
 
